# ramono

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
src/: lib.rs  main.rs
tests/: filehandles_hog.rs  memory_hog.rs
