[package]
name = "ramono"
version = "0.5.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/jeteve/ramono"
authors = ["Jerome Eteve <jerome@eteve.net>"]
description = "Ramono greedily eats your resources"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
strip = true
opt-level = "z"  # Optimize for size.

[dependencies]
log = "0.4.20"
env_logger = "0.11.3"
clap = { version = "4.4.6", features = ["derive"] }
tempfile = "3.8.0"
ctrlc = "3.4.1"

[dev-dependencies]
test-log = { version = "*", features = [ "log" ]}
